--- a/titlesection/titlesection.css
+++ b/titlesection/titlesection.css
@@ -1,17 +1,27 @@
-h1 {
-	color: blue;
-}
-
-button:hover {
-	background-color: red;
-	cursor: pointer;
-	font-size: 20px;
+:root {
+    --titleSectionPrimaryColor: white;
 }
 
 
 #title {
+    	color: var(--titleSectionPrimaryColor);
 text-align: center;
 padding: 200px;
-background-image: url("images/image.png");
+background-image: url("../images/image.png");
 background-position: center top;
 }
+
+.title-section-button {
+    color: var(--titleSectionPrimaryColor);    
+    border: solid var(--titleSectionPrimaryColor);
+    padding: 15px 20px;
+    background-color: transparent;
+    border-radius: 5px;
+}
+
+.title-section-button:hover {
+	background-color: red;
+	cursor: pointer;
+	
+}
+
