--- a/titlesection/titlesection.css
+++ b/titlesection/titlesection.css
@@ -1,5 +1,6 @@
 :root {
-    --titleSectionPrimaryColor: white;
+    --titleSectionPrimaryColor: rgb(255, 255, 255);
+    --titleSectionSecondaryColor: rgb(14, 5, 1);
 }
 
 
@@ -20,8 +21,8 @@ background-position: center top;
 }
 
 .title-section-button:hover {
-	background-color: red;
+	background-color: var(--titleSectionPrimaryColor);
+    color: var(--titleSectionSecondaryColor);
 	cursor: pointer;
-	
 }
 
