--- a/titlesection/titlesection.css
+++ b/titlesection/titlesection.css
@@ -1,6 +1,7 @@
 :root {
     --titleSectionPrimaryColor: rgb(255, 255, 255);
     --titleSectionSecondaryColor: rgb(164, 123, 108);
+    --titleSectionTertiaryColor: rgb(0, 0, 0);
 }
 
 
