Added links to icon and CV download

--- a/aboutmesection/aboutme.css
+++ b/aboutmesection/aboutme.css
@@ -9,6 +9,11 @@
 .aboutme-icons {
     font-size: 25px;
     margin-top: 45px;
+    margin-bottom: 25px;
+}
+
+.aboutme-icons > a {
+    text-decoration: none;
 }
 .aboutme-icon {
     margin: 10px;
@@ -17,4 +22,9 @@
 .aboutme-icon:hover {
     cursor: pointer;
     color: var(--titleSectionTertiaryColor);
+}
+
+.aboutme-download-link > a{
+    color: var(--titleSectionTertiaryColor);
+
 }
