Created Craps Game

--- a/titlesection/titlesection.css
+++ b/titlesection/titlesection.css
@@ -9,7 +9,7 @@
 	color: var(--titleSectionPrimaryColor);
     text-align: center;
     padding: 200px;
-    background-image: url("../images/image.png");
+    background-image: url("../images/desert.png");
     background-position: center top;
 }
 
