--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -1,5 +1,5 @@
 #craps-game {
-    background-image: url('../images/Plain.png');
+    background-image: url('../images/Vegas.jpg');
     color: wheat;
     background-position: center top;
 }
@@ -13,7 +13,7 @@
     height: min(500px, 57vw);
     border: solid white 2px;
     margin: 100px auto 0 auto;
-    background-image: url('../images/crapstable.png');
+    background-image: url('../images/CrapsTable.png');
     background-size: cover;
     background-position: center top;
 }
@@ -48,4 +48,14 @@
 
 #craps-main-section {
     display: none;
+}
+
+.craps-main-section-stats {
+    text-align: center;
+    margin-top: 70px;
+}
+
+#craps-stats-money-container {
+    font-size: 30px;
+    margin: 25px 0 5px 0;
 }
