Made entire craps game responsive

--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -31,26 +31,23 @@
 }
 
 #craps-registration-pane {
-    margin-top: 55px;
+    margin-top: calc(var(--height-scale) * 0.15);
+    font-size: calc(var(--game-title-size) * 0.5);
     text-align: center;
-    color: white;
 }
 
 .craps-registration-input {
     background: none;
     border: none;
     border-bottom: solid white 1px;
-    margin-top: 25px;
+    margin: calc(var(--height-scale) * 0.055) 0;
     color: white;
+    font-size: calc(var(--game-title-size) * 0.5);
     text-align: center;
 }
 
 .craps-registration-input:focus {
     outline-width: 0;
-}
-
-.craps-registration-continue {
-    margin-top: 25px;
 }
 
 .craps-registration-continue:hover {
@@ -64,10 +61,11 @@
 
 .craps-main-section-stats {
     text-align: center;
-    margin-top: 70px;
+    font-size: calc(var(--height-scale) * 0.05);
+    margin-top: calc(var(--height-scale) * 0.02);
 }
 
 #craps-stats-money-container {
-    font-size: 30px;
-    margin: 25px 0 5px 0;
+    font-size: calc(var(--height-scale) * 0.08);
+    margin-top: calc(var(--height-scale) * 0.1);
 }
