--- a/crapsgame/crapsgame.css
+++ b/crapsgame/crapsgame.css
@@ -75,11 +75,62 @@
     margin-top: calc(var(--height-scale) * 0.1);
 }
 
+.craps-on-table-container {
+    margin-top: calc(var(--height-scale) * 0.28);
+    font-size: calc(var(--height-scale) * 0.03);
+    text-align: center;
+}
+
+
+
 .craps-round-manager {
     position: absolute;
     bottom: calc(var(--height-scale) * 0.02);
-    border: solid black 4px;
     width: 100%;
     text-align: center;
     font-size: calc(var(--height-scale) * 0.04);
+}
+
+.craps-roll-dice-container {
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.craps-roll-dice-container:hover {
+    cursor: pointer;
+    transform: scale(1.3);
+}
+
+.craps-betting-grid {
+    display: grid;
+    grid-template-columns: 33% auto 33%;
+    width: 80%;
+    margin: 0 auto;
+    border: solid white 2px;
+    border-radius: 5px;
+}
+
+.craps-bet-button {
+    padding: calc(var(--height-scale) * 0.02);
+}
+
+.craps-bet-button:hover {
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.craps-bet-amount-container {
+    padding: calc(var(--height-scale) * 0.02);
+    background-color: rgba(0, 0, 0, 0.5);
+    border-left: solid white 2px;
+    border-right: solid white 2px;
+}
+
+#craps-user-bet-amount {
+    margin: 0 calc(var(--height-scale) * 0.02);
+}
+
+.craps-user-bet-amount-change:hover {
+    cursor: pointer;
+    font-weight: bolder;
 }
